--- a/src/404.njk
+++ b/src/404.njk
@@ -10,13 +10,12 @@ eleventyExcludeFromCollections: true
 {% block content %}
 <div class="not-found-page">
   <div class="not-found-inner">
-    <h1 class="not-found-title">404 — Member Not Found</h1>
     <p class="not-found-text">
-      The link you followed doesn't exist (or got lost in a bad trade).
+      The bootleg you are looking for doesn't exist (or got lost in a bad trade).
     </p>
 
     <img
-      src="{{ '/assets/images/404.png' | url }}"
+      src="{{ '/assets/images/404.jpg' | url }}"
       class="not-found-image"
     >
 
